@@ -1,0 +1,3 @@
+SUBDIRS = Engines
+
+EXTRA_DIST = lscp.xml
