@@ -2,6 +2,3 @@
 
 # all man files that should be installed
 man_MANS = linuxsampler.1
-# include man files into distribution (because they're not by default)
-dist_MANS = linuxsampler.1
-EXTRA_DIST = linuxsampler.1
