@@ -1,0 +1,3 @@
+SUBDIRS = LinuxSampler.xcode
+
+EXTRA_DIST = version.h
