@@ -1,0 +1,3 @@
+## Process this file with automake to produce Makefile.in
+
+EXTRA_DIST = update_grammar.pl
