@@ -3,7 +3,11 @@ METASOURCES = AUTO
 
 AM_CXXFLAGS = -Wreturn-type -ffast-math $(CXX_CPU_SWITCH)
 
-noinst_LTLIBRARIES =  liblinuxsamplercommonengine.la
-liblinuxsamplercommonengine_la_SOURCES =  BiquadFilter.h Engine.h Event.cpp Event.h LFO.h
-
-noinst_HEADERS = Resampler.h EngineChannel.h
+noinst_LTLIBRARIES = liblinuxsamplercommonengine.la
+liblinuxsamplercommonengine_la_SOURCES = \
+	BiquadFilter.h \
+	Engine.h \
+	Event.cpp Event.h \
+	LFO.h \
+	Resampler.h \
+	EngineChannel.h
